# OmniParser

./: gradio_demo.py  pyproject.toml  requirements.txt
util/: utils.py
