[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omniparser"
version = "2.0.0"
description = "Screen parsing tool that converts GUI screenshots into structured elements for vision-based AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["util*"]
